# mta_kindle

./: .gitignore  Cargo.toml  README.md
src/: main.rs
static/css/: styles.css
static/js/: js.js
templates/: mta.html
