[package]
name = "mta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.0"
actix = "0.13"
awc = { version = "3.0.1", features = ["rustls"] }
rustls = "0.20"
webpki-roots = "0.22"
askama = "0.11.0"
env_logger = "0.9.0"
log = "0.4"
serde = "1.0.117"
serde_json = "1.0.59"
chrono = "0.4"
chrono-tz = "0.8"
cached = "0.40.0"
dotenv_codegen = "0.15.0"
lazy_static = "1.4.0"

[build-dependencies]
askama = "0.11.0"
